force-app/main/default/objects/Leave_Request_Segment__c/Leave_Request_Segment__c.object-meta.xml
<CustomObject>
    <label>Leave Request Segment</label>
    <pluralLabel>Leave Request Segments</pluralLabel>
    <nameField>
        <label>Segment Number</label>
        <type>AutoNumber</type>
        <displayFormat>SEG-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>