force-app/main/default/objects/Leave_Request_Segment__c/fields/Leave_Request__c.field-meta.xml
<CustomField>
    <fullName>Leave_Request__c</fullName>
    <label>Leave Request</label>
    <referenceTo>Leave_Request__c</referenceTo>
    <relationshipLabel>Leave Request Segments</relationshipLabel>
    <relationshipName>Leave_Request_Segments</relationshipName>
    <type>MasterDetail</type>
</CustomField>