force-app/main/default/objects/Leave_Request_Segment__c/fields/Leave_Type_Definition__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type_Definition__c</fullName>
    <label>Leave Type Definition</label>
    <referenceTo>Leave_Type_Definition__c</referenceTo>
    <relationshipLabel>Leave Request Segments</relationshipLabel>
    <relationshipName>Leave_Request_Segments</relationshipName>
    <type>Lookup</type>
</CustomField>