force-app/main/default/objects/Leave_Request_Segment__c/fields/Segment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Segment_End_Date__c</fullName>
    <label>Segment End Date</label>
    <type>Date</type>
</CustomField>