force-app/main/default/objects/Leave_Request_Segment__c/fields/Segment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Segment_Start_Date__c</fullName>
    <label>Segment Start Date</label>
    <type>Date</type>
</CustomField>