force-app/main/default/objects/Leave_Request_Segment__c/fields/Segment_Status__c.field-meta.xml
<CustomField>
    <fullName>Segment_Status__c</fullName>
    <label>Segment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Consumed</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>